ja estou mais tranquilo mas continuo a odiar o braga

--- a/lab4/css/estilos.css
+++ b/lab4/css/estilos.css
@@ -94,7 +94,7 @@
 	#menu input:checked ~ ul {display:block}
 }
 html {
-	background-image: url(images/bg.jpg);
+	background-image: url(../images/bg.jpg);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
